[project]
name = "remotemaker"
version = "0.2.1"
description = "Remotely run mapmaker"
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests>=2.32.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
